--- a/front/src/css/TapBar.css
+++ b/front/src/css/TapBar.css
@@ -21,3 +21,36 @@
   cursor: pointer;
   overflow: hidden;
 }
+
+.tapbar-reserve {
+  position: absolute;
+}
+.tapbar-reserve__reserve {
+  position: absolute;
+  bottom: 90px;
+  margin-left: 82px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 250px;
+  height: 50px;
+  background: #6247AA;
+  border-radius: 30px;
+  font-family: "SF Pro Text";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 20px;
+  text-align: center;
+  color: #F6F6F9;
+}
+.tapbar-reserve__tapbar {
+  bottom: 0;
+  position: absolute;
+}
