--- a/front/src/scss/TapBar.scss
+++ b/front/src/scss/TapBar.scss
@@ -19,3 +19,35 @@
         overflow: hidden;
     }
 }
+.tapbar-reserve {
+    position: absolute;
+    &__reserve {
+        position: absolute;
+        bottom: 90px;
+        margin-left: 82px;
+
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        width: 250px;
+        height: 50px;
+
+        background: #6247AA;
+        border-radius: 30px;
+
+        font-family: 'SF Pro Text';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 17px;
+        line-height: 20px;
+        text-align: center;
+
+        color: #F6F6F9;
+    }
+    &__tapbar {
+        bottom: 0;
+        position: absolute;
+    }
+}
