--- a/front/src/css/TapBar.css
+++ b/front/src/css/TapBar.css
@@ -1,17 +1,18 @@
 .tapbar {
-  width: 414px;
-  height: 80px;
+  width: 109px;
+  height: 950px;
+  background: #FFFFFF;
+  border-radius: 0px 30px 30px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-flex: wrap;
+      -ms-flex: wrap;
+          flex: wrap;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  background: #F2F2F2;
-  border-radius: 30px 30px 1px 1px;
+      -ms-flex-flow: column;
+          flex-flow: column;
 }
 .tapbar__icon {
   margin: auto;
@@ -21,36 +22,11 @@
   cursor: pointer;
   overflow: hidden;
 }
-
-.tapbar-reserve {
-  position: absolute;
-}
-.tapbar-reserve__reserve {
-  position: absolute;
-  bottom: 90px;
-  margin-left: 82px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 250px;
-  height: 50px;
-  background: #6247AA;
-  border-radius: 30px;
-  font-family: "SF Pro Text";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 17px;
-  line-height: 20px;
-  text-align: center;
-  color: #F6F6F9;
-}
-.tapbar-reserve__tapbar {
-  bottom: 0;
-  position: absolute;
+.tapbar__exit-icon {
+  margin: 300px auto auto auto;
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
 }
