--- a/front/src/scss/TapBar.scss
+++ b/front/src/scss/TapBar.scss
@@ -1,14 +1,13 @@
 .tapbar {
-    width: 414px;
-    height: 80px;
-
+    width: 109px;
+    height: 950px;
+    background: #FFFFFF;
+    border-radius: 0px 30px 30px 0px;
+  
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    background: #F2F2F2;
-    border-radius: 30px 30px 1px 1px;
-
+    flex: wrap;
+    flex-flow: column;
+  
     &__icon{
         margin:auto;
 
@@ -18,36 +17,13 @@
         cursor:pointer;
         overflow: hidden;
     }
-}
-.tapbar-reserve {
-    position: absolute;
-    &__reserve {
-        position: absolute;
-        bottom: 90px;
-        margin-left: 82px;
+    &__exit-icon{
+        margin: 300px auto auto auto;
 
-        
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        width: 250px;
-        height: 50px;
-
-        background: #6247AA;
-        border-radius: 30px;
-
-        font-family: 'SF Pro Text';
-        font-style: normal;
-        font-weight: 600;
-        font-size: 17px;
-        line-height: 20px;
-        text-align: center;
-
-        color: #F6F6F9;
+        background-color: Transparent;
+        background-repeat:no-repeat;
+        border: none;
+        cursor:pointer;
+        overflow: hidden;
     }
-    &__tapbar {
-        bottom: 0;
-        position: absolute;
-    }
-}
+  }
