--- a/front/src/css/Restors.css
+++ b/front/src/css/Restors.css
@@ -2,6 +2,11 @@
   overflow-y: scroll;
   height: 870px;
 }
+
 .restors__restor {
   margin: 10px;
 }
+
+/*# sourceMappingURL=Restors.css.map */
+
+/*# sourceMappingURL=Restors.css.map */
