--- a/front/src/css/App.css
+++ b/front/src/css/App.css
@@ -1,5 +1,11 @@
 html {
   overflow: hidden;
+  background: #6247AA;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
 }
 
 ::-webkit-scrollbar {
@@ -15,32 +21,27 @@ html {
 }
 
 .app {
-  background: #6247AA;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: row;
+  flex-wrap: wrap;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 .app__tapbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
 }
+.app__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
 input[type=text] {
   background-color: transparent;
   border: 0px;
@@ -60,3 +61,5 @@ button {
   cursor: pointer;
   overflow: hidden;
 }
+
+/*# sourceMappingURL=App.css.map */
