--- a/front/src/css/RestorOpen/Menu.css
+++ b/front/src/css/RestorOpen/Menu.css
@@ -4,7 +4,12 @@
   font-weight: 600;
   font-size: 22px;
 }
+
 .menu__dish {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+/*# sourceMappingURL=Menu.css.map */
+
+/*# sourceMappingURL=Menu.css.map */
