--- a/front/src/css/RestorOpen/RestorOpen.css
+++ b/front/src/css/RestorOpen/RestorOpen.css
@@ -1,19 +1,12 @@
 .restor-open {
   width: 90%;
   margin: 0px auto;
-  -webkit-box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
-          box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
+  box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
   border-radius: 12px;
   background: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 .restor-open__main {
   overflow-y: scroll;
@@ -21,16 +14,9 @@
 }
 .restor-open__rating-reviews {
   height: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  align-items: center;
 }
 .restor-open__rating-reviews img {
   margin-left: 20px;
@@ -44,13 +30,8 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 17px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 .restor-open__address-schedule p {
   margin-top: 1px;
@@ -73,15 +54,9 @@
   opacity: 0.5;
 }
 .restor-open__tags {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: row;
+  flex-wrap: wrap;
   font-family: "SF Pro Rounded";
   font-style: normal;
   font-weight: 600;
@@ -102,3 +77,5 @@
   text-align: center;
   line-height: 30px;
 }
+
+/*# sourceMappingURL=RestorOpen.css.map */
