--- a/front/src/css/TapBar.css
+++ b/front/src/css/TapBar.css
@@ -3,17 +3,11 @@
   height: 950px;
   background: #FFFFFF;
   border-radius: 0px 30px 30px 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: wrap;
-      -ms-flex: wrap;
-          flex: wrap;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  flex: wrap;
+  flex-flow: column;
 }
+
 .tapbar__icon {
   margin: auto;
   background-color: Transparent;
@@ -22,6 +16,7 @@
   cursor: pointer;
   overflow: hidden;
 }
+
 .tapbar__exit-icon {
   margin: 300px auto auto auto;
   background-color: Transparent;
@@ -30,3 +25,7 @@
   cursor: pointer;
   overflow: hidden;
 }
+
+/*# sourceMappingURL=TapBar.css.map */
+
+/*# sourceMappingURL=TapBar.css.map */
