--- a/front/src/scss/App.scss
+++ b/front/src/scss/App.scss
@@ -1,5 +1,11 @@
 html{
     overflow: hidden;
+    background: #6247AA;
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
 }
 
 ::-webkit-scrollbar {
@@ -11,12 +17,13 @@ html{
     background: #FF0000;
 }
 
-.app{
-    background: #6247AA;
+.app {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     overflow: hidden;
+    width: 100%;
+    height: 100%;
 
     &__tapbar{
         display: flex;
@@ -25,9 +32,13 @@ html{
         flex: 1;
     }
     &__body{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
     }
 }
-
 
 input[type="text"] {
     background-color: transparent;
