--- a/front/src/css/App.css
+++ b/front/src/css/App.css
@@ -1,5 +1,6 @@
 html {
   overflow: hidden;
+  background: #6247AA;
 }
 
 ::-webkit-scrollbar {
@@ -15,7 +16,6 @@ html {
 }
 
 .app {
-  background: #6247AA;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -26,6 +26,8 @@ html {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 .app__tapbar {
   display: -webkit-box;
