home and favor(hardcode)

--- a/front/src/css/App.css
+++ b/front/src/css/App.css
@@ -3,16 +3,14 @@ html {
   background: #6247AA;
 }
 
-::-webkit-scrollbar {
-  width: 0;
-  /* Remove scrollbar space */
-  background: transparent;
-  /* Optional: just make scrollbar invisible */
+body {
+  width: 100vw;
+  height: 100vh;
 }
 
-/* Optional: show position indicator in red */
-::-webkit-scrollbar-thumb {
-  background: #FF0000;
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
 }
 
 .app {
@@ -37,12 +35,23 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  width: 10%;
 }
+.app__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 90%;
+  height: 100%;
+}
+
 input[type=text] {
   background-color: transparent;
   border: 0px;
