--- a/front/src/scss/Favor.scss
+++ b/front/src/scss/Favor.scss
@@ -1,15 +1,13 @@
-.home{
+.favor{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    height: 97vh;
 
     &__left {
         display: flex;
         flex-direction: column;
         margin: 15px;
         flex: 6;
-        height: 100%;
     }
     &__right {
         display: flex;
