--- a/front/src/css/Restor.css
+++ b/front/src/css/Restor.css
@@ -1,6 +1,6 @@
 .restor {
-  width: 492px;
   height: 144px;
+  width: 96%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -29,6 +29,7 @@
   -webkit-box-flex: 4;
       -ms-flex: 4;
           flex: 4;
+  height: 80%;
   margin-top: 6px;
   margin-left: 12px;
   margin-bottom: 12px;
@@ -38,6 +39,7 @@
 .restor__img-column img {
   -o-object-fit: cover;
      object-fit: cover;
+  height: 100%;
 }
 .restor__info-column {
   display: -webkit-box;
@@ -52,6 +54,7 @@
   -webkit-box-flex: 6;
       -ms-flex: 6;
           flex: 6;
+  height: 80%;
   margin-top: 12px;
   margin-right: 12px;
   margin-left: 6px;
