--- a/front/src/css/Restors.css
+++ b/front/src/css/Restors.css
@@ -1,6 +1,8 @@
 .restors {
   overflow-y: scroll;
-  height: 870px;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 10px;
 }
 .restors__restor {
   margin: 10px;
