--- a/front/src/scss/App.scss
+++ b/front/src/scss/App.scss
@@ -3,18 +3,14 @@ html{
     background: #6247AA;
 }
 
-// body {
-//     width: 100vw;
-//     height: 100vh;
-// }
+body {
+    width: 100vw;
+    height: 100vh;
+}
 
 ::-webkit-scrollbar {
-    width: 0;  /* Remove scrollbar space */
-    background: transparent;  /* Optional: just make scrollbar invisible */
-}
-/* Optional: show position indicator in red */
-::-webkit-scrollbar-thumb {
-    background: #FF0000;
+    width: 0;
+    background: transparent;
 }
 
 .app {
@@ -28,15 +24,14 @@ html{
     &__tapbar{
         display: flex;
         flex-direction: column;
-        flex-basis: 100%;
-        flex: 1;
+        width: 10%;
     }
     &__body{
-        // display: flex;
-        // flex-direction: column;
-        // justify-content: center;
-        // width: 100%;
-        // height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 90%;
+        height: 100%;
     }
 }
 
