--- a/front/src/scss/Restor.scss
+++ b/front/src/scss/Restor.scss
@@ -1,6 +1,6 @@
 .restor {
-    width: 492px;
     height: 144px;
+    width: 96%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -15,6 +15,7 @@
         flex-direction: column;
         flex-basis: 100%;
         flex: 4;
+        height: 80%;
 
         margin-top: 6px;
         margin-left: 12px;
@@ -24,12 +25,14 @@
     }
     &__img-column img{
         object-fit: cover;
+        height: 100%;
     }
     &__info-column {
         display: flex;
         flex-direction: column;
         flex-basis: 100%;
         flex: 6;
+        height: 80%;
 
         margin-top: 12px;
         margin-right: 12px;
