--- a/front/src/scss/Restors.scss
+++ b/front/src/scss/Restors.scss
@@ -1,7 +1,8 @@
 .restors {
     overflow-y: scroll;
-
-    height: 870px;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 10px;
 
     &__restor{
         margin: 10px;
