--- a/front/src/scss/RestorOpen/RestorOpen.scss
+++ b/front/src/scss/RestorOpen/RestorOpen.scss
@@ -69,7 +69,7 @@
 
         opacity: 0.9;
     }
-    &__tag {
+    &__tag1 {
         margin: 10px;
         width: 90px;
         height: 30px;
@@ -79,6 +79,21 @@
         padding-left: 7px;
 
         background: rgba(255, 0, 34, 0.7);
+        border-radius: 30px;
+
+        text-align: center;
+        line-height: 30px;
+    }
+    &__tag2 {
+        margin: 10px;
+        width: 90px;
+        height: 30px;
+
+        overflow: hidden;
+        text-overflow: ellipsis;
+        padding-left: 7px;
+
+        background: rgba(251, 177, 60, 0.7);
         border-radius: 30px;
 
         text-align: center;
