--- a/front/src/css/Common/InputField.css
+++ b/front/src/css/Common/InputField.css
@@ -22,5 +22,18 @@
   background-color: #F2F2F2;
   margin-top: 4px;
 }
+.input-field__input_error {
+  border-bottom: 1px solid #EB6534;
+}
+.input-field__prompt {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 10px;
+  color: #EB6534;
+  margin-top: 6px;
+  visibility: collapse;
+}
+.input-field__prompt_active {
+  visibility: visible;
+}
 
 /*# sourceMappingURL=InputField.css.map */
