--- a/front/src/scss/AuthForm.scss
+++ b/front/src/scss/AuthForm.scss
@@ -52,34 +52,18 @@
         width: 100%;
     }
 
-    &__login-switch {
+    &__switch {
         width: 30%;
         cursor:pointer;
     }
 
-    &__login-switch_active {
+    &__switch_active {
         border-bottom: 3px #6247AA solid;
         border-radius: 1px;
         transition: 0.2s;
     }
 
-    &__login-switch-text {
-        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        margin-bottom: 100px;
-    }
-
-    &__signup-switch {
-        width: 30%;
-        cursor:pointer;
-    }
-
-    &__signup-switch_active {
-        border-bottom: 3px #6247AA solid;
-        border-radius: 1px;
-        transition: 0.2s;
-    }
-
-    &__signup-switch-text {
+    &__switch-text {
         font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         margin-bottom: 100px;
     }
@@ -97,8 +81,20 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: space-evenly;
         width: 100%;
         height: 30%;
+    }
+
+    &__form-error {
+        text-align: center;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 14px;
+        color: #EB6534;
+        visibility: collapse;
+    }
+
+    &__form-error_active {
+        visibility: visible;
     }
 }
