--- a/front/src/scss/Common/InputField.scss
+++ b/front/src/scss/Common/InputField.scss
@@ -23,4 +23,20 @@
         background-color: #F2F2F2;
         margin-top: 4px;
     }
+
+    &__input_error {
+        border-bottom: 1px solid #EB6534;
+    }
+
+    &__prompt {
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 10px;
+        color: #EB6534;
+        margin-top: 6px;
+        visibility: collapse;
+    }
+
+    &__prompt_active {
+        visibility: visible;
+    }
 }
