--- a/front/src/css/RestorOpen/Dish.css
+++ b/front/src/css/RestorOpen/Dish.css
@@ -8,9 +8,12 @@
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: 78px;
-  width: 100%;
-  background: #F2F2F2;
+  position: relative;
+  height: 123px;
+  width: 90%;
+  background: #FFFFFF;
+  -webkit-box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
+          box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
   border-radius: 12px;
 }
 .dish__hidden {
@@ -32,11 +35,6 @@
           flex: 9;
   -o-object-fit: contain;
      object-fit: contain;
-  max-width: 100%;
-  max-height: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -55,6 +53,9 @@
       -ms-flex: 11;
           flex: 11;
   margin-left: 5px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .dish__title {
   height: 15px;
@@ -96,4 +97,9 @@
   margin: 3px;
   color: #000000;
   opacity: 0.9;
+}
+.dish__add-button {
+  position: absolute;
+  right: 15px;
+  bottom: 20px;
 }
