--- a/front/src/scss/RestorOpen/Dish.scss
+++ b/front/src/scss/RestorOpen/Dish.scss
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    position: relative;
 
-    height: 78px;
-    width: 100%;
+    height: 123px;
+    width: 90%;
 
-    background: #F2F2F2;
+    background: #FFFFFF;
+    box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
     border-radius: 12px;
 
     &__hidden {
@@ -21,9 +23,6 @@
         flex: 9;
 
         object-fit: contain;
-        max-width: 100%;
-        max-height: 100%;
-        align-items: center;
         justify-content: center;
     }
     &__info-column {
@@ -33,6 +32,7 @@
         flex: 11;
 
         margin-left: 5px;
+        justify-content: center;
     }
     &__title {
         height: 15px;
@@ -86,5 +86,10 @@
         color: #000000;
 
         opacity: 0.9;
+    }
+    &__add-button {
+        position:absolute;
+        right: 15px;
+        bottom: 20px;
     }
 }
