--- a/front/src/scss/RestorOpen/Menu.scss
+++ b/front/src/scss/RestorOpen/Menu.scss
@@ -6,7 +6,6 @@
         font-size: 22px;
     }
     &__dish {
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin: 10px auto;
     }
 }
