--- a/front/src/scss/RestorOpen/Dish.scss
+++ b/front/src/scss/RestorOpen/Dish.scss
@@ -24,6 +24,7 @@
 
         object-fit: contain;
         justify-content: center;
+        align-items: center;
     }
     &__info-column {
         display: flex;
