--- a/front/src/css/RestorOpen/Dish.css
+++ b/front/src/css/RestorOpen/Dish.css
@@ -38,6 +38,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .dish__info-column {
   display: -webkit-box;
