--- a/front/src/css/RestorOpen/RestorOpen.css
+++ b/front/src/css/RestorOpen/RestorOpen.css
@@ -13,7 +13,10 @@
 }
 .restor-open__main {
   overflow-y: scroll;
-  height: 800px;
+  height: 700px;
+}
+.restor-open__add-button {
+  margin: 0 auto;
 }
 .restor-open__rating-reviews {
   height: 40px;
