--- a/front/src/scss/Common/ReserveButton.scss
+++ b/front/src/scss/Common/ReserveButton.scss
@@ -1,9 +1,9 @@
-.button {
+.reserve-button {
     background-color: #6247AA;
     border-radius: 30px;
     cursor:pointer;
-    width: 90px;
-    height: 25px;
+    width: 314px;
+    height: 62px;
 
     &__text {
         font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
