--- a/front/src/css/TapBar.css
+++ b/front/src/css/TapBar.css
@@ -1,6 +1,6 @@
 .tapbar {
-  width: 109px;
-  height: 950px;
+  width: 100%;
+  height: 100%;
   background: #FFFFFF;
   border-radius: 0px 30px 30px 0px;
   display: flex;
@@ -14,6 +14,7 @@
   border: none;
   cursor: pointer;
   overflow: hidden;
+  filter: drop-shadow(0px 6px 20px rgba(98, 71, 170, 0.4));
 }
 .tapbar__exit-icon {
   margin: 300px auto auto auto;
