--- a/front/src/scss/App.scss
+++ b/front/src/scss/App.scss
@@ -6,6 +6,7 @@ html{
 body {
     width: 100vw;
     height: 100vh;
+    margin: 0px;
 }
 
 ::-webkit-scrollbar {
@@ -16,7 +17,6 @@ body {
 .app {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     overflow: hidden;
     width: 100%;
     height: 100%;
