--- a/front/src/scss/App.scss
+++ b/front/src/scss/App.scss
@@ -30,9 +30,8 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         width: 100%;
-        // from ilyagu
-        // width: 90%;
         height: 100%;
     }
 }
