--- a/front/src/css/Common/Button.css
+++ b/front/src/css/Common/Button.css
@@ -1,14 +1,21 @@
 .button {
-  width: 50%;
-  background-color: #6247AA;
   border-radius: 30px;
-  width: 70%;
-  height: 25%;
   cursor: pointer;
+}
+.button_light {
+  background-color: #F2F2F2;
+}
+.button_dark {
+  background-color: #6247AA;
 }
 .button__text {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
+}
+.button__text_light {
+  color: #6247AA;
+}
+.button__text_dark {
   color: #FFFFFF;
 }
 
