--- a/front/src/css/Common/InputField.css
+++ b/front/src/css/Common/InputField.css
@@ -10,17 +10,29 @@
   color: #000000;
   opacity: 0.4;
 }
+.input-field__label_dark {
+  color: #000000;
+}
+.input-field__label_light {
+  color: #F2F2F2;
+}
 .input-field__input {
   width: 100%;
   height: 36px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
-  color: #000000;
   outline: none;
   border: none;
-  border-bottom: 1px solid #000000;
-  background-color: #F2F2F2;
+  background-color: transparent;
   margin-top: 4px;
+}
+.input-field__input_dark {
+  color: #000000;
+  border-bottom: 1px solid #000000;
+}
+.input-field__input_light {
+  color: #F2F2F2;
+  border-bottom: 1px solid #FFFFFF;
 }
 .input-field__input_error {
   border-bottom: 1px solid #EB6534;
