--- a/front/src/scss/Common/Button.scss
+++ b/front/src/scss/Common/Button.scss
@@ -1,14 +1,25 @@
 .button {
-    width: 50%;
-    background-color: #6247AA;
     border-radius: 30px;
-    width: 70%;
-    height: 25%;
     cursor:pointer;
+
+    &_light {
+        background-color: #F2F2F2;
+    }
+
+    &_dark {
+        background-color: #6247AA;
+    }
 
     &__text {
         font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 14px;
-        color: #FFFFFF;
+
+        &_light {
+            color: #6247AA;
+        }
+
+        &_dark {
+            color: #FFFFFF;
+        }
     }
 }
