--- a/front/src/scss/Common/InputField.scss
+++ b/front/src/scss/Common/InputField.scss
@@ -9,6 +9,14 @@
         font-size: 14px;
         color: #000000;
         opacity: 0.4;
+
+        &_dark {
+            color: #000000;
+        }
+    
+        &_light {
+            color: #F2F2F2;
+        }
     }
 
     &__input {
@@ -16,16 +24,24 @@
         height: 36px;
         font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 14px;
-        color: #000000;
         outline: none;
         border: none;
-        border-bottom: 1px solid #000000;
-        background-color: #F2F2F2;
+        background-color: transparent;
         margin-top: 4px;
-    }
 
-    &__input_error {
-        border-bottom: 1px solid #EB6534;
+        &_dark {
+            color: #000000;
+            border-bottom: 1px solid #000000;
+        }
+    
+        &_light {
+            color: #F2F2F2;
+            border-bottom: 1px solid #FFFFFF;
+        }
+    
+        &_error {
+            border-bottom: 1px solid #EB6534;
+        }
     }
 
     &__prompt {
