--- a/front/src/scss/RestorOpen/RestorOpen.scss
+++ b/front/src/scss/RestorOpen/RestorOpen.scss
@@ -9,8 +9,8 @@
         overflow-y: scroll;
         height: 700px;
     }
-    &__add-button{
-        margin: 0 auto;
+    &__reverse-button {
+        margin: 30px auto;
     }
     &__rating-reviews {
         height: 40px;
