--- a/front/src/css/App.css
+++ b/front/src/css/App.css
@@ -1,5 +1,4 @@
 html {
-  overflow: hidden;
   background: #6247AA;
 }
 
@@ -15,21 +14,36 @@ body {
 }
 
 .app {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  overflow: hidden;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 .app__tapbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  width: 10%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-width: 90px;
+  max-width: 110px;
 }
 .app__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 100%;
   height: 100%;
 }
@@ -53,5 +67,3 @@ button {
   cursor: pointer;
   overflow: hidden;
 }
-
-/*# sourceMappingURL=App.css.map */
