--- a/front/src/css/Cart/Cart.css
+++ b/front/src/css/Cart/Cart.css
@@ -1,5 +1,5 @@
 .cart {
-  margin-top: 20px;
+  margin: 20px auto;
 }
 .cart__title {
   font-family: "SF Pro Text";
@@ -12,12 +12,21 @@
   margin-bottom: 20px;
 }
 .cart__cart-restors {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 900px;
+}
+.cart__cart-restors_scroll {
+  overflow-y: scroll;
 }
 .cart__cart-restor {
   margin-top: 10px;
 }
-
-/*# sourceMappingURL=Cart.css.map */
