--- a/front/src/css/Common/CancelButton.css
+++ b/front/src/css/Common/CancelButton.css
@@ -1,11 +1,11 @@
-.add-button {
-  background-color: #6247AA;
+.cancel-button {
+  background: #EB6534;
   border-radius: 30px;
   cursor: pointer;
-  width: 90px;
+  width: 100px;
   height: 30px;
 }
-.add-button__text {
+.cancel-button__text {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
   color: #FFFFFF;
