--- a/front/src/css/RestorOpen/RestorOpen.css
+++ b/front/src/css/RestorOpen/RestorOpen.css
@@ -1,22 +1,35 @@
 .restor-open {
   width: 90%;
   margin: 0px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .restor-open__main {
   overflow-y: scroll;
   height: 700px;
 }
-.restor-open__add-button {
-  margin: 0 auto;
+.restor-open__reverse-button {
+  margin: 30px auto;
 }
 .restor-open__rating-reviews {
   height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .restor-open__rating-reviews img {
   margin-left: 20px;
@@ -30,8 +43,13 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 17px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .restor-open__address-schedule p {
   margin-top: 1px;
@@ -54,9 +72,15 @@
   opacity: 0.5;
 }
 .restor-open__tags {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   font-family: "SF Pro Rounded";
   font-style: normal;
   font-weight: 600;
@@ -89,5 +113,3 @@
   text-align: center;
   line-height: 30px;
 }
-
-/*# sourceMappingURL=RestorOpen.css.map */
