--- a/front/src/css/TapBar.css
+++ b/front/src/css/TapBar.css
@@ -3,9 +3,16 @@
   height: 100%;
   background: #FFFFFF;
   border-radius: 0px 30px 30px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex: wrap;
-  flex-flow: column;
+  -webkit-box-flex: wrap;
+      -ms-flex: wrap;
+          flex: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
 }
 .tapbar__icon {
   margin: auto;
@@ -14,7 +21,8 @@
   border: none;
   cursor: pointer;
   overflow: hidden;
-  filter: drop-shadow(0px 6px 20px rgba(98, 71, 170, 0.4));
+  -webkit-filter: drop-shadow(0px 6px 20px rgba(98, 71, 170, 0.4));
+          filter: drop-shadow(0px 6px 20px rgba(98, 71, 170, 0.4));
 }
 .tapbar__exit-icon {
   margin: 300px auto auto auto;
@@ -24,5 +32,3 @@
   cursor: pointer;
   overflow: hidden;
 }
-
-/*# sourceMappingURL=TapBar.css.map */
