--- a/front/src/scss/App.scss
+++ b/front/src/scss/App.scss
@@ -1,5 +1,4 @@
 html{
-    overflow: hidden;
     background: #6247AA;
 }
 
@@ -17,19 +16,19 @@ body {
 .app {
     display: flex;
     flex-direction: row;
-    overflow: hidden;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 
     &__tapbar{
         display: flex;
         flex-direction: column;
-        width: 10%;
+        min-width: 90px;
+        max-width: 110px;
     }
     &__body{
         display: flex;
         flex-direction: column;
-        justify-content: center;
         width: 100%;
         // from ilyagu
         // width: 90%;
