--- a/front/src/scss/Common/CancelButton.scss
+++ b/front/src/scss/Common/CancelButton.scss
@@ -1,12 +1,9 @@
-.reserve-button {
-    background-color: #6247AA;
+.cancel-button {
+    background: #EB6534;
     border-radius: 30px;
     cursor:pointer;
-    width: 314px;
-    height: 62px;
-
-    font-style: normal;
-    text-align: center;
+    width: 100px;
+    height: 30px;
 
     &__text {
         font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
