--- a/front/src/css/App.css
+++ b/front/src/css/App.css
@@ -30,9 +30,11 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100%;
+}
+.app__body_center {
+  align-items: center;
 }
 
 button {
