--- a/front/src/css/AuthForm.css
+++ b/front/src/css/AuthForm.css
@@ -67,6 +67,13 @@
   width: 100%;
   height: 40%;
 }
+.auth-form__checkbox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  color: green;
+}
 .auth-form__form-button {
   display: flex;
   flex-direction: column;
