--- a/front/src/css/Common/InputField.css
+++ b/front/src/css/Common/InputField.css
@@ -37,6 +37,27 @@
 .input-field__input_error {
   border-bottom: 1px solid #EB6534;
 }
+.input-field__textarea {
+  width: 100%;
+  max-width: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  margin-top: 4px;
+}
+.input-field__textarea_dark {
+  color: #000000;
+  border-bottom: 1px solid #000000;
+}
+.input-field__textarea_light {
+  color: #F2F2F2;
+  border-bottom: 1px solid #FFFFFF;
+}
+.input-field__textarea_error {
+  border-bottom: 1px solid #EB6534;
+}
 .input-field__prompt {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 10px;
