--- a/front/src/css/Profile.css
+++ b/front/src/css/Profile.css
@@ -1,8 +1,14 @@
+.profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+}
 .profile__form-button {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  width: 100%;
+  width: 80%;
   height: 30%;
 }
 .profile__form-error {
