--- a/front/src/scss/AdminCommon/AddRestorForm.scss
+++ b/front/src/scss/AdminCommon/AddRestorForm.scss
@@ -1,15 +1,30 @@
-.profile {
+.add-restor-form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    box-shadow: 5px 5px 20px 5px rgb(57 57 57 / 15%);
+    border-radius: 12px;
+    background: white;
+    width: 90%;
+    height: 95vh;
+    overflow-y: scroll;
 
-    &__form-button {
+    &__fields {
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+
+    &__button {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         justify-content: space-evenly;
-        width: 80%;
+        width: 100%;
         height: 30%;
+        margin-bottom: 24px;
     }
 
     &__form-error {
