--- a/front/src/scss/Common/InputField.scss
+++ b/front/src/scss/Common/InputField.scss
@@ -44,6 +44,31 @@
         }
     }
 
+    &__textarea {
+        width: 100%;
+        max-width: 100%;
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 14px;
+        outline: none;
+        border: none;
+        background-color: transparent;
+        margin-top: 4px;
+
+        &_dark {
+            color: #000000;
+            border-bottom: 1px solid #000000;
+        }
+    
+        &_light {
+            color: #F2F2F2;
+            border-bottom: 1px solid #FFFFFF;
+        }
+    
+        &_error {
+            border-bottom: 1px solid #EB6534;
+        }
+    }
+
     &__prompt {
         font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 10px;
