--- a/front/src/css/Common/InputField.css
+++ b/front/src/css/Common/InputField.css
@@ -1,6 +1,11 @@
 .input-field {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 80%;
   margin-top: 24px;
 }
@@ -68,5 +73,3 @@
 .input-field__prompt_active {
   visibility: visible;
 }
-
-/*# sourceMappingURL=InputField.css.map */
