--- a/front/src/css/RestorOpen/RestorOpen.css
+++ b/front/src/css/RestorOpen/RestorOpen.css
@@ -2,9 +2,15 @@
   width: 90%;
   height: 100%;
   margin: 0px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .restor-open__main {
   overflow-y: scroll;
@@ -15,9 +21,16 @@
 }
 .restor-open__rating-reviews {
   height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .restor-open__rating-reviews img {
   margin-left: 20px;
@@ -31,8 +44,13 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 17px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .restor-open__address-schedule p {
   margin-top: 1px;
@@ -55,9 +73,15 @@
   opacity: 0.5;
 }
 .restor-open__tags {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   font-family: "SF Pro Rounded";
   font-style: normal;
   font-weight: 600;
@@ -90,5 +114,3 @@
   text-align: center;
   line-height: 30px;
 }
-
-/*# sourceMappingURL=RestorOpen.css.map */
