--- a/front/src/css/Cart/Cart.css
+++ b/front/src/css/Cart/Cart.css
@@ -1,11 +1,6 @@
 .cart {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   height: 100%;
   margin: 20px auto;
 }
@@ -17,20 +12,14 @@
   line-height: 33px;
   text-align: center;
   color: #FFFFFF;
-  margin-bottom: 20px;
+  margin-top: 24px;
+  margin-bottom: 10px;
 }
 .cart__cart-restors {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 90%;
+  flex-direction: column;
+  align-items: center;
+  height: 91%;
 }
 .cart__cart-restors_scroll {
   overflow-y: scroll;
@@ -38,3 +27,5 @@
 .cart__cart-restor {
   margin-top: 10px;
 }
+
+/*# sourceMappingURL=Cart.css.map */
