--- a/front/src/css/Common/Button.css
+++ b/front/src/css/Common/Button.css
@@ -8,6 +8,9 @@
 .button_dark {
   background-color: #6247AA;
 }
+.button_cancel {
+  background-color: #EB6534;
+}
 .button__text {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
@@ -16,6 +19,9 @@
   color: #6247AA;
 }
 .button__text_dark {
+  color: #FFFFFF;
+}
+.button__text_cancel {
   color: #FFFFFF;
 }
 
