--- a/front/src/scss/Cart/Cart.scss
+++ b/front/src/scss/Cart/Cart.scss
@@ -13,13 +13,14 @@
         text-align: center;
 
         color: #FFFFFF;
-        margin-bottom: 20px;
+        margin-top: 24px;
+        margin-bottom: 10px;
     }
     &__cart-restors {
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 90%;
+        height: 91%;
     }
     &__cart-restors_scroll {
         overflow-y: scroll;
