--- a/front/src/scss/Common/Button.scss
+++ b/front/src/scss/Common/Button.scss
@@ -10,6 +10,10 @@
         background-color: #6247AA;
     }
 
+    &_cancel {
+        background-color: #EB6534;
+    }
+
     &__text {
         font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 14px;
@@ -19,6 +23,10 @@
         }
 
         &_dark {
+            color: #FFFFFF;
+        }
+
+        &_cancel {
             color: #FFFFFF;
         }
     }
