--- a/front/src/css/Cart/Cart.css
+++ b/front/src/css/Cart/Cart.css
@@ -1,6 +1,11 @@
 .cart {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 100%;
   margin: 20px auto;
 }
@@ -16,9 +21,16 @@
   margin-bottom: 10px;
 }
 .cart__cart-restors {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 91%;
 }
 .cart__cart-restors_scroll {
@@ -27,5 +39,3 @@
 .cart__cart-restor {
   margin-top: 10px;
 }
-
-/*# sourceMappingURL=Cart.css.map */
