--- a/front/src/css/RestorOpen/Dish.css
+++ b/front/src/css/RestorOpen/Dish.css
@@ -46,7 +46,7 @@
 }
 .dish__desc {
   display: flex;
-  height: 30px;
+  min-height: 30px;
   width: 90%;
   font-family: "SF Pro Rounded";
   font-style: normal;
