--- a/front/src/css/Restor.css
+++ b/front/src/css/Restor.css
@@ -3,6 +3,7 @@
   width: 96%;
   display: flex;
   flex-direction: row;
+  align-items: center;
   flex-wrap: wrap;
   margin: 10px;
   background: #FFFFFF;
@@ -28,6 +29,8 @@
 .restor__info-column {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   flex-basis: 100%;
   flex: 6;
   height: 80%;
@@ -59,9 +62,30 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: baseline;
+  margin-left: 10px;
+  margin-top: 10px;
+  justify-content: center;
 }
 .restor__metro img {
   margin-right: 10px;
+}
+.restor__tag {
+  margin: 10px;
+  width: 90px;
+  height: 30px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-left: 7px;
+  background: #6247AA;
+  border-radius: 30px;
+  text-align: center;
+  line-height: 30px;
+}
+.restor__tag-text {
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  color: #FFFFFF;
 }
 
 /*# sourceMappingURL=Restor.css.map */
