--- a/front/src/css/RestorOpen/TitleBar.css
+++ b/front/src/css/RestorOpen/TitleBar.css
@@ -4,6 +4,13 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
+.restor-titlebar__title {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 64px;
+  color: #000000;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
 .restor-titlebar__back {
   display: flex;
   flex-direction: column;
