--- a/front/src/scss/RestorOpen/TitleBar.scss
+++ b/front/src/scss/RestorOpen/TitleBar.scss
@@ -4,6 +4,15 @@
     flex-direction: row;
     flex-wrap: wrap;
 
+    &__title {
+        font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 64px;
+        color: #000000;
+        text-overflow: ellipsis; //образка длинных блоков с текстом
+        overflow: hidden; //прятать выходящий за пределы текст
+        // white-space: nowrap; //запрет на перенос текста
+    }
+
     &__back {
         display: flex;
         flex-direction: column;
