--- a/front/src/css/RestorOpen/Menu.css
+++ b/front/src/css/RestorOpen/Menu.css
@@ -2,10 +2,8 @@
   font-family: SF Pro Rounded;
   font-style: normal;
   font-weight: 600;
-  font-size: 22px;
-}
+  font-size: 22px; }
 .menu__dish {
-  margin: 10px auto;
-}
+  margin: 10px auto; }
 
 /*# sourceMappingURL=Menu.css.map */
