--- a/front/src/css/SearchBar.css
+++ b/front/src/css/SearchBar.css
@@ -2,27 +2,23 @@
   width: 70%;
   height: 36px;
   background: #F2F2F2;
-  border-radius: 12px;
-}
-.search__img {
-  margin: 8px;
-  margin-left: 15px;
-}
-.search__input {
-  position: absolute;
-  margin: 8px;
-  width: 10%;
-}
-.search input {
-  background-color: transparent;
-  border: 0px;
-  outline: none;
-  font-family: SF Pro Rounded;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 17px;
-  line-height: 20px;
-  color: #000000;
-}
+  border-radius: 12px; }
+  .search__img {
+    margin: 8px;
+    margin-left: 15px; }
+  .search__input {
+    position: absolute;
+    margin: 8px;
+    width: 10%; }
+  .search input {
+    background-color: transparent;
+    border: 0px;
+    outline: none;
+    font-family: SF Pro Rounded;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 20px;
+    color: #000000; }
 
 /*# sourceMappingURL=SearchBar.css.map */
