--- a/front/src/css/Admin.css
+++ b/front/src/css/Admin.css
@@ -2,50 +2,42 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 97vh;
-}
-.admin__left {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 15px;
-  flex: 4;
-  height: 100%;
-}
-.admin__add-button {
-  margin-top: 24px;
-}
-.admin__right {
-  display: flex;
-  flex-direction: row;
-  margin: 15px;
-  flex: 8;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-.admin__right_hidden {
-  justify-content: flex-end;
-}
-.admin__form {
-  box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
-  border-radius: 12px;
-  background: white;
-  width: 90%;
-  height: 95vh;
-}
-.admin__search {
-  margin: 0 auto;
-}
-.admin__map {
-  position: absolute;
-  left: 0;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(1.5rem);
-}
+  height: 97vh; }
+  .admin__left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 15px;
+    flex: 4;
+    height: 100%; }
+  .admin__add-button {
+    margin-top: 24px; }
+  .admin__right {
+    display: flex;
+    flex-direction: row;
+    margin: 15px;
+    flex: 8;
+    align-items: flex-start;
+    justify-content: space-between; }
+    .admin__right_hidden {
+      justify-content: flex-end; }
+  .admin__form {
+    box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
+    border-radius: 12px;
+    background: white;
+    width: 90%;
+    height: 95vh; }
+  .admin__search {
+    margin: 0 auto; }
+  .admin__map {
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(1.5rem); }
 
 /*# sourceMappingURL=Admin.css.map */
