--- a/front/src/css/AdminCommon/AddRestorForm.css
+++ b/front/src/css/AdminCommon/AddRestorForm.css
@@ -7,33 +7,28 @@
   background: white;
   width: 90%;
   height: 95vh;
-  overflow-y: scroll;
-}
-.add-restor-form__fields {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
-.add-restor-form__button {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
-  height: 30%;
-  margin-bottom: 24px;
-}
-.add-restor-form__form-error {
-  text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 14px;
-  color: #EB6534;
-  visibility: collapse;
-}
-.add-restor-form__form-error_active {
-  visibility: visible;
-}
+  overflow-y: scroll; }
+  .add-restor-form__fields {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%; }
+  .add-restor-form__button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 30%;
+    margin-bottom: 24px; }
+  .add-restor-form__form-error {
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    color: #EB6534;
+    visibility: collapse; }
+  .add-restor-form__form-error_active {
+    visibility: visible; }
 
 /*# sourceMappingURL=AddRestorForm.css.map */
