--- a/front/src/css/App.css
+++ b/front/src/css/App.css
@@ -1,48 +1,40 @@
 html {
-  background: #6247AA;
-}
+  background: #6247AA; }
 
 body {
   width: 100vw;
   height: 100vh;
-  margin: 0px;
-}
+  margin: 0px; }
 
 ::-webkit-scrollbar {
   width: 0;
-  background: transparent;
-}
+  background: transparent; }
 
 .app {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-}
-.app__tapbar {
-  display: flex;
-  flex-direction: column;
-  min-width: 90px;
-  max-width: 110px;
-}
-.app__body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-}
-.app__body_center {
-  align-items: center;
-}
+  overflow: hidden; }
+  .app__tapbar {
+    display: flex;
+    flex-direction: column;
+    min-width: 90px;
+    max-width: 110px; }
+  .app__body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%; }
+    .app__body_center {
+      align-items: center; }
 
 button {
   background-color: Transparent;
   background-repeat: no-repeat;
   border: none;
   cursor: pointer;
-  overflow: hidden;
-}
+  overflow: hidden; }
 
 /*# sourceMappingURL=App.css.map */
