--- a/front/src/css/AuthForm.css
+++ b/front/src/css/AuthForm.css
@@ -4,93 +4,78 @@
   align-items: flex-end;
   width: 95%;
   height: 90%;
-  margin-right: 36px;
-}
-.auth-form__card {
-  display: flex;
-  flex-direction: column;
-  width: 30%;
-  height: 100%;
-  background-color: #F2F2F2;
-  border-radius: 20px;
-}
-.auth-form__header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 30%;
-  background-color: #FFFFFF;
-  border-radius: 20px;
-}
-.auth-form__logo {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 90%;
-}
-.auth-form__logo-img {
-  width: 40px;
-  height: 40px;
-}
-.auth-form__logo-text {
-  margin-left: 4px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 40px;
-  color: #6247AA;
-}
-.auth-form__switches {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  width: 100%;
-}
-.auth-form__switch {
-  width: 30%;
-  cursor: pointer;
-}
-.auth-form__switch_active {
-  border-bottom: 3px #6247AA solid;
-  border-radius: 1px;
-  transition: 0.2s;
-}
-.auth-form__switch-text {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin-bottom: 100px;
-}
-.auth-form__fields {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 40%;
-}
-.auth-form__checkbox {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  color: green;
-}
-.auth-form__form-button {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
-  height: 30%;
-}
-.auth-form__form-error {
-  text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 14px;
-  color: #EB6534;
-  visibility: collapse;
-}
-.auth-form__form-error_active {
-  visibility: visible;
-}
+  margin-right: 36px; }
+  .auth-form__card {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    height: 100%;
+    background-color: #F2F2F2;
+    border-radius: 20px; }
+  .auth-form__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 30%;
+    background-color: #FFFFFF;
+    border-radius: 20px; }
+  .auth-form__logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 90%; }
+  .auth-form__logo-img {
+    width: 40px;
+    height: 40px; }
+  .auth-form__logo-text {
+    margin-left: 4px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 40px;
+    color: #6247AA; }
+  .auth-form__switches {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%; }
+  .auth-form__switch {
+    width: 30%;
+    cursor: pointer; }
+  .auth-form__switch_active {
+    border-bottom: 3px #6247AA solid;
+    border-radius: 1px;
+    transition: 0.2s; }
+  .auth-form__switch-text {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 100px; }
+  .auth-form__fields {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 40%; }
+  .auth-form__checkbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    color: green; }
+  .auth-form__form-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 30%; }
+  .auth-form__form-error {
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    color: #EB6534;
+    visibility: collapse; }
+  .auth-form__form-error_active {
+    visibility: visible; }
 
 /*# sourceMappingURL=AuthForm.css.map */
