--- a/front/src/css/Cart/Cart.css
+++ b/front/src/css/Cart/Cart.css
@@ -2,30 +2,25 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin: 20px auto;
-}
-.cart__title {
-  font-family: "SF Pro Text";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 28px;
-  line-height: 33px;
-  text-align: center;
-  color: #FFFFFF;
-  margin-top: 24px;
-  margin-bottom: 10px;
-}
-.cart__cart-restors {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 91%;
-}
-.cart__cart-restors_scroll {
-  overflow-y: scroll;
-}
-.cart__cart-restor {
-  margin-top: 10px;
-}
+  margin: 20px auto; }
+  .cart__title {
+    font-family: 'SF Pro Text';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 33px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-top: 24px;
+    margin-bottom: 10px; }
+  .cart__cart-restors {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 91%; }
+  .cart__cart-restors_scroll {
+    overflow-y: scroll; }
+  .cart__cart-restor {
+    margin-top: 10px; }
 
 /*# sourceMappingURL=Cart.css.map */
