--- a/front/src/css/Common/AddButton.css
+++ b/front/src/css/Common/AddButton.css
@@ -3,12 +3,10 @@
   border-radius: 30px;
   cursor: pointer;
   width: 90px;
-  height: 30px;
-}
-.add-button__text {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 14px;
-  color: #FFFFFF;
-}
+  height: 30px; }
+  .add-button__text {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    color: #FFFFFF; }
 
 /*# sourceMappingURL=AddButton.css.map */
