--- a/front/src/css/Common/Button.css
+++ b/front/src/css/Common/Button.css
@@ -1,28 +1,20 @@
 .button {
   border-radius: 30px;
-  cursor: pointer;
-}
-.button_light {
-  background-color: #F2F2F2;
-}
-.button_dark {
-  background-color: #6247AA;
-}
-.button_cancel {
-  background-color: #EB6534;
-}
-.button__text {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 14px;
-}
-.button__text_light {
-  color: #6247AA;
-}
-.button__text_dark {
-  color: #FFFFFF;
-}
-.button__text_cancel {
-  color: #FFFFFF;
-}
+  cursor: pointer; }
+  .button_light {
+    background-color: #F2F2F2; }
+  .button_dark {
+    background-color: #6247AA; }
+  .button_cancel {
+    background-color: #EB6534; }
+  .button__text {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px; }
+    .button__text_light {
+      color: #6247AA; }
+    .button__text_dark {
+      color: #FFFFFF; }
+    .button__text_cancel {
+      color: #FFFFFF; }
 
 /*# sourceMappingURL=Button.css.map */
