--- a/front/src/css/Common/ReserveButton.css
+++ b/front/src/css/Common/ReserveButton.css
@@ -5,12 +5,10 @@
   width: 314px;
   height: 62px;
   font-style: normal;
-  text-align: center;
-}
-.reserve-button__text {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 14px;
-  color: #FFFFFF;
-}
+  text-align: center; }
+  .reserve-button__text {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    color: #FFFFFF; }
 
 /*# sourceMappingURL=ReserveButton.css.map */
