--- a/front/src/css/Favor.css
+++ b/front/src/css/Favor.css
@@ -2,29 +2,24 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 97vh;
-}
-.favor__left {
-  display: flex;
-  flex-direction: column;
-  margin: 15px;
-  flex: 4;
-}
-.favor__right {
-  display: flex;
-  flex-direction: column;
-  margin: 15px;
-  flex: 8;
-}
-.favor__restorOpen_in {
-  box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
-  border-radius: 12px;
-  background: white;
-  width: 90%;
-  height: 95vh;
-}
-.favor__search {
-  margin: 0 auto;
-}
+  height: 97vh; }
+  .favor__left {
+    display: flex;
+    flex-direction: column;
+    margin: 15px;
+    flex: 4; }
+  .favor__right {
+    display: flex;
+    flex-direction: column;
+    margin: 15px;
+    flex: 8; }
+  .favor__restorOpen_in {
+    box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
+    border-radius: 12px;
+    background: white;
+    width: 90%;
+    height: 95vh; }
+  .favor__search {
+    margin: 0 auto; }
 
 /*# sourceMappingURL=Favor.css.map */
