--- a/front/src/css/Home.css
+++ b/front/src/css/Home.css
@@ -2,41 +2,35 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 97vh;
-}
-.home__left {
-  display: flex;
-  flex-direction: column;
-  margin: 15px;
-  flex: 4;
-  height: 100%;
-}
-.home__right {
-  display: flex;
-  flex-direction: column;
-  margin: 15px;
-  flex: 8;
-}
-.home__restorOpen_in {
-  box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
-  border-radius: 12px;
-  background: white;
-  width: 90%;
-  height: 95vh;
-}
-.home__search {
-  margin: 0 auto;
-}
-.home__reserve {
-  position: absolute;
-  left: 0;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(1.5rem);
-}
+  height: 97vh; }
+  .home__left {
+    display: flex;
+    flex-direction: column;
+    margin: 15px;
+    flex: 4;
+    height: 100%; }
+  .home__right {
+    display: flex;
+    flex-direction: column;
+    margin: 15px;
+    flex: 8; }
+  .home__restorOpen_in {
+    box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
+    border-radius: 12px;
+    background: white;
+    width: 90%;
+    height: 95vh; }
+  .home__search {
+    margin: 0 auto; }
+  .home__reserve {
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(1.5rem); }
 
 /*# sourceMappingURL=Home.css.map */
