--- a/front/src/css/Reserve/Reserve.css
+++ b/front/src/css/Reserve/Reserve.css
@@ -3,42 +3,36 @@
   height: 840px;
   background: #FFFFFF;
   box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
-  border-radius: 12px;
-}
-.reserve__canvas {
-  width: 600px;
-  height: 600px;
-  margin: 0 auto;
-  margin-bottom: 10px;
-  background: #FFFFFF;
-  box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
-  border-radius: 12px;
-}
-.reserve__canvas canvas {
-  width: 600px;
-  height: 600px;
-  box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
-  border-radius: 12px;
-}
-.reserve__floor-time {
-  width: 100%;
-  height: 50px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-.reserve__floor-time select {
-  background: #F2F2F2;
-  border-radius: 12px;
-  height: 30px;
-  width: 100px;
-  text-align: center;
-}
-.reserve__order-button {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: center;
-}
+  border-radius: 12px; }
+  .reserve__canvas {
+    width: 600px;
+    height: 600px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    background: #FFFFFF;
+    box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
+    border-radius: 12px; }
+  .reserve__canvas canvas {
+    width: 600px;
+    height: 600px;
+    box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
+    border-radius: 12px; }
+  .reserve__floor-time {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly; }
+  .reserve__floor-time select {
+    background: #F2F2F2;
+    border-radius: 12px;
+    height: 30px;
+    width: 100px;
+    text-align: center; }
+  .reserve__order-button {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center; }
 
 /*# sourceMappingURL=Reserve.css.map */
