--- a/front/src/css/Restor.css
+++ b/front/src/css/Restor.css
@@ -8,84 +8,73 @@
   margin: 10px;
   background: #FFFFFF;
   box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
-  border-radius: 12px;
-}
-.restor__img-column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 4;
-  height: 80%;
-  margin-top: 6px;
-  margin-left: 12px;
-  margin-bottom: 12px;
-  margin-right: 6px;
-  overflow: hidden;
-}
-.restor__img-column img {
-  object-fit: cover;
-  height: 100%;
-}
-.restor__info-column {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-basis: 100%;
-  flex: 6;
-  height: 80%;
-  margin-top: 12px;
-  margin-right: 12px;
-  margin-left: 6px;
-  margin-bottom: 12px;
-}
-.restor__title {
-  font-family: SF Pro Rounded;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 101.34%;
-  color: #000000;
-  opacity: 0.9;
-}
-.restor__rating {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: baseline;
-}
-.restor__rating img {
-  margin-right: 10px;
-}
-.restor__metro {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: baseline;
-  margin-left: 10px;
-  margin-top: 10px;
-  justify-content: center;
-}
-.restor__metro img {
-  margin-right: 10px;
-}
-.restor__tag {
-  margin: 10px;
-  width: 90px;
-  height: 30px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding-left: 7px;
-  background: #6247AA;
-  border-radius: 30px;
-  text-align: center;
-  line-height: 30px;
-}
-.restor__tag-text {
-  text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 14px;
-  color: #FFFFFF;
-}
+  border-radius: 12px; }
+  .restor__img-column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 4;
+    height: 80%;
+    margin-top: 6px;
+    margin-left: 12px;
+    margin-bottom: 12px;
+    margin-right: 6px;
+    overflow: hidden; }
+  .restor__img-column img {
+    object-fit: cover;
+    height: 100%; }
+  .restor__info-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 100%;
+    flex: 6;
+    height: 80%;
+    margin-top: 12px;
+    margin-right: 12px;
+    margin-left: 6px;
+    margin-bottom: 12px; }
+  .restor__title {
+    font-family: SF Pro Rounded;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 101.34%;
+    color: #000000;
+    opacity: 0.9; }
+  .restor__rating {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: baseline; }
+  .restor__rating img {
+    margin-right: 10px; }
+  .restor__metro {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: baseline;
+    margin-left: 10px;
+    margin-top: 10px;
+    justify-content: center; }
+  .restor__metro img {
+    margin-right: 10px; }
+  .restor__tag {
+    margin: 10px;
+    width: 90px;
+    height: 30px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-left: 7px;
+    background: #6247AA;
+    border-radius: 30px;
+    text-align: center;
+    line-height: 30px; }
+  .restor__tag-text {
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    color: #FFFFFF; }
 
 /*# sourceMappingURL=Restor.css.map */
