--- a/front/src/css/RestorOpen/TitleBar.css
+++ b/front/src/css/RestorOpen/TitleBar.css
@@ -2,45 +2,39 @@
   height: 100px;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-}
-.restor-titlebar__title {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 64px;
-  color: #000000;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-.restor-titlebar__back {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-  align-items: center;
-  justify-content: center;
-}
-.restor-titlebar__img {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 3;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-}
-.restor-titlebar__img img {
-  width: auto;
-  height: 100%;
-}
-.restor-titlebar__like {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-  align-items: center;
-  justify-content: center;
-}
+  flex-wrap: wrap; }
+  .restor-titlebar__title {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 64px;
+    color: #000000;
+    text-overflow: ellipsis;
+    overflow: hidden; }
+  .restor-titlebar__back {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    align-items: center;
+    justify-content: center; }
+  .restor-titlebar__img {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 3;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden; }
+  .restor-titlebar__img img {
+    width: auto;
+    height: 100%; }
+  .restor-titlebar__like {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    align-items: center;
+    justify-content: center; }
 
 /*# sourceMappingURL=TitleBar.css.map */
