--- a/front/src/css/TapBar.css
+++ b/front/src/css/TapBar.css
@@ -6,24 +6,21 @@
   border-radius: 0px 30px 30px 0px;
   display: flex;
   flex: wrap;
-  flex-flow: column;
-}
-.tapbar__icon {
-  margin: auto;
-  background-color: Transparent;
-  background-repeat: no-repeat;
-  border: none;
-  cursor: pointer;
-  overflow: hidden;
-  filter: drop-shadow(0px 6px 20px rgba(98, 71, 170, 0.4));
-}
-.tapbar__exit-icon {
-  margin: 300px auto auto auto;
-  background-color: Transparent;
-  background-repeat: no-repeat;
-  border: none;
-  cursor: pointer;
-  overflow: hidden;
-}
+  flex-flow: column; }
+  .tapbar__icon {
+    margin: auto;
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    filter: drop-shadow(0px 6px 20px rgba(98, 71, 170, 0.4)); }
+  .tapbar__exit-icon {
+    margin: 300px auto auto auto;
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden; }
 
 /*# sourceMappingURL=TapBar.css.map */
