--- a/front/src/scss/Admin.scss
+++ b/front/src/scss/Admin.scss
@@ -35,7 +35,7 @@
     }
 
     &__form {
-        box-shadow: 5px 5px 20px 5px rgb(57 57 57 / 15%);
+        box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
         border-radius: 12px;
         background: white;
         width: 90%;
