--- a/front/src/scss/AdminCommon/AddRestorForm.scss
+++ b/front/src/scss/AdminCommon/AddRestorForm.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 5px 5px 20px 5px rgb(57 57 57 / 15%);
+    box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
     border-radius: 12px;
     background: white;
     width: 90%;
