--- a/front/src/scss/AdminCommon/AdminPlaces.scss
+++ b/front/src/scss/AdminCommon/AdminPlaces.scss
@@ -19,7 +19,7 @@
     &__canvas canvas {
         width: 600px;
         height: 600px;
-        box-shadow: 5px 5px 20px 5px rgb(57 57 57 / 15%);
+        box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
         border-radius: 12px;
     }
     &__params{
