--- a/front/src/scss/Favor.scss
+++ b/front/src/scss/Favor.scss
@@ -17,7 +17,7 @@
         flex: 8;
     }
     &__restorOpen_in {
-        box-shadow: 5px 5px 20px 5px rgb(57 57 57 / 15%);
+        box-shadow: 5px 5px 20px 5px rgba(57, 57, 57, 0.15);
         border-radius: 12px;
         background: white;
         width: 90%;
